Znear clip plane adjusted to something that makes sense. Pistol weapon adjustments.

--- a/DukeGame/Config/DukeEditorUserSettings.ini
+++ b/DukeGame/Config/DukeEditorUserSettings.ini
@@ -142,8 +142,8 @@ AnimTreeEditor=1522,157,1397,1027
 [EditorFrame]
 FrameClassName=WxEditorFrame
 LocalizationFile=UnrealEd
-FramePos.x=786
-FramePos.y=23
+FramePos.x=1233
+FramePos.y=21
 FrameSize.x=2061
 FrameSize.y=1294
 FrameMaximized=0
@@ -156,7 +156,7 @@ UseScriptDefinedOrder=True
 
 [StartupTipDialog]
 ShowAtStartup=True
-CurrentTip=6
+CurrentTip=8
 
 [UnrealEd.MaterialEditorOptions]
 bShowGrid=True
@@ -508,7 +508,7 @@ Documentation_Docked=True
 Documentation_Visible=True
 
 [UnrealEd]
-RecentAssets="                              a_characters.pigcopc.pigcopc_animtree a_characters.pigcopc.pigcopc_Anims a_characters.pigcopc.pigcopc a_characters.pigcopc.EDF_PigCop_D a_dukevoice.StatueLines.DStatueLine_LetsRock a_dukevoice.StatueLines.DStatueLine_ClobberTime_01 a_dukevoice.MT_KillLines.Duke_5Points_01 FX_LensFlares.Materials.M_FX_Lensflares_105MM_Prime01 GOW_War_Effects_UDK.Textures.T_COG_MuzzleflashSpray_Masked_Tex wp_pistol.WP_PistolMesh_Anims zone1_vegas.palm2 zone1_vegas.palm2_2_Mat zone1_vegas.palm2_1_Mat zone1_vegas.palm2_0_Mat z1l2_data.vegas_casino1_dukesym3BC_Mat DnMovies.Starbsrt_Mat DnMovies.StarBurstOtherSide z1l2_data.dcasino_signs_dcassign7aRC_Mat wp_pistol.Materials.Master_Weapon_Shader DnMovies.Starbsrt edf2.edf2 Duke.DukeMesh Duke.DukeMesh_Anims edf2.edf2_Anims z1l2_data.dcasino_logos_dcaslogo1RC_Mat z1l2_data.vegas_casinos_ext_BuildingBallysAB_Mat z1l2_data.airforcebase_Masking_smallfence1ABC_Mat wp_pistol.WP_PistolMesh UDK_Rain.Particles.P_RainSplashes T_FX_UT3.Effects.P_FX_HeadShot "
+RecentAssets="                              wp_pistol.WP_PistolMesh T_FX_UT3.Effects.P_FX_HeadShot UDK_Rain.Particles.P_RainSplashes z1l2_data.airforcebase_Masking_smallfence1ABC_Mat z1l2_data.vegas_casinos_ext_BuildingBallysAB_Mat z1l2_data.dcasino_logos_dcaslogo1RC_Mat edf2.edf2_Anims Duke.DukeMesh_Anims Duke.DukeMesh edf2.edf2 DnMovies.Starbsrt wp_pistol.Materials.Master_Weapon_Shader z1l2_data.dcasino_signs_dcassign7aRC_Mat DnMovies.StarBurstOtherSide DnMovies.Starbsrt_Mat z1l2_data.vegas_casino1_dukesym3BC_Mat zone1_vegas.palm2_0_Mat zone1_vegas.palm2_1_Mat zone1_vegas.palm2_2_Mat zone1_vegas.palm2 wp_pistol.WP_PistolMesh_Anims GOW_War_Effects_UDK.Textures.T_COG_MuzzleflashSpray_Masked_Tex FX_LensFlares.Materials.M_FX_Lensflares_105MM_Prime01 a_dukevoice.MT_KillLines.Duke_5Points_01 a_dukevoice.StatueLines.DStatueLine_ClobberTime_01 a_dukevoice.StatueLines.DStatueLine_LetsRock a_characters.pigcopc.EDF_PigCop_D a_characters.pigcopc.pigcopc a_characters.pigcopc.pigcopc_Anims a_characters.pigcopc.pigcopc_animtree "
 
 [ReferencedAssets]
 SplitterPos=200
@@ -524,8 +524,8 @@ IsFilterPanelCollapsed=False
 FilterPanelSearchString=
 LeftPanelWidth=444.000000
 IsLeftPanelCollapsed=False
-ExpandedPackages=/DukeGame;/DukeGame/Content;/DukeGame/Content/Cannibal;/DukeGame/Content/Textures/z1l2_data;/DukeGame/Content/DnMovies;
-LeftSubpanelsState=mSharedCollectionsSizer:False:250.112507645499|mPrivateCollectionsSizer:False:70.4325581395348|mPackagesSizer:False:476.454934214966|
+ExpandedPackages=/DukeGame;/DukeGame/Content;/DukeGame/Content/Cannibal;/DukeGame/Content/Textures/z1l2_data;/DukeGame/Content/Weapons;/DukeGame/Content/Weapons/wp_pistol;/DukeGame/Content/DnMovies;
+LeftSubpanelsState=mSharedCollectionsSizer:False:256.388856645386|mPrivateCollectionsSizer:False:72.2|mPackagesSizer:False:488.411143354614|
 SelectedSharedCollection=
 IsUsingFlatPackageList=False
 AssetViewLayoutAsDouble=3.000000
@@ -593,8 +593,8 @@ bFilterTerrain=True
 
 [MRU]
 MRUItem0=D:\projects\Duke2004\DukeGame\Content\Maps\z1l2.dnfmap
-MRUItem1=D:\projects\Duke2004\DukeGame\Content\Maps\testmaps\zoo.dnfmap
-MRUItem2=..\..\DukeGame\Content\Maps\TestMaps\zoo.dukemap
+MRUItem1=..\..\DukeGame\Content\Maps\TestMaps\zoo.dukemap
+MRUItem2=D:\projects\Duke2004\DukeGame\Content\Maps\testmaps\zoo.dnfmap
 MRUItem3=D:\projects\Duke2004\DukeGame\Content\Maps\MainMenu.dnfmap
 MRUItem4=D:\projects\Duke2004\DukeGame\Content\Maps\dukeEntry.dnfmap
 
